--- a/app/views/after_signup/_profile_skill_fields.html.haml
+++ b/app/views/after_signup/_profile_skill_fields.html.haml
@@ -7,6 +7,13 @@
     = link_to_remove_association "Remove Skill", f, class: "btn btn-itunes-inversed"
     %hr
 
+:scss
+  main, body, html{
+    margin: 0;
+    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
 :javascript
 
