--- a/app/views/after_signup/confirm_address.html.haml
+++ b/app/views/after_signup/confirm_address.html.haml
@@ -28,6 +28,13 @@
     height: 400px;
     width: 100%;
   }
+  main, body, html{
+    margin: 0;
+    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
 
 :javascript
   var profile = #{@profile.to_json};
