--- a/app/views/after_signup/confirm_profile.html.haml
+++ b/app/views/after_signup/confirm_profile.html.haml
@@ -39,6 +39,13 @@
             .form-actions
               = f.button :submit, "Next", class: "btn btn-itunes-inversed btn-lg btn-block"
 
+:scss
+  main, body, html{
+    margin: 0;
+    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
 :javascript
   $("#profile_address").geocomplete({
@@ -49,3 +56,42 @@
   });
 
   $('#profile_domain_id').selectize();
+  
+  $('#profile_university').selectize({
+    maxItems: 1,
+    persist: false,
+    valueField: 'name',
+    labelField: 'name',
+    searchField: 'name',
+    options: [],
+    create: true,
+    render: {
+      option: function(item, escape) {
+        var actors = [];
+        for (var i = 0, n = item.length; i < n; i++) {
+          actors.push('<span>' + escape(item.autocompletes[i].name) + '</span>');
+        }
+
+        return '<div>' +
+                  '<span class="name">' + escape(item.name) + '</span>' +
+               '</div>';
+      }
+    },
+    load: function(query, callback) {
+      if (!query.length) return callback();
+      $.ajax({
+        url: '/autocompletes/university.json',
+        type: 'GET',
+        dataType: 'json',
+        data: {
+          q: query,
+        },
+        error: function() {
+          callback();
+        },
+        success: function(res) {
+          callback(res.autocompletes);
+        }
+      });
+    }
+  });
