--- a/app/views/after_signup/confirm_skills.html.haml
+++ b/app/views/after_signup/confirm_skills.html.haml
@@ -19,6 +19,13 @@
                 = render 'profiles/profile_skill_fields', f: skill
               .form-actions
                 = f.button :submit, "Update", class: "btn btn-itunes-inversed btn-lg btn-block"
+:scss
+  main, body, html{
+    margin: 0;
+    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
 :javascript
 
