--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -6,9 +6,6 @@
   main, body, html{
     margin: 0;
     padding: 0;
-    position:fixed;
-    top:0px;
-    bottom:0px;
-    left:0px;
-    right:0px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
