--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -27,7 +27,7 @@
     = f.input :phone, :input_html => { class:"form-control" }
     = f.input :age, required: true, class:"form-control", label: "Year of birth"
 
-    = f.input :domain_id, collection: @domains, class:"form-control", label: "Area of expertise"
+    = f.input :domain_id, collection: @domains, class:"form-control", label: "Domain (Area of expertise)"
 
     = f.input :university, input_html: { class: "form-control" }
     = f.input :bio
