--- a/app/views/after_signup/confirm_skills.html.haml
+++ b/app/views/after_signup/confirm_skills.html.haml
@@ -18,7 +18,7 @@
               = f.simple_fields_for :profile_skills do |skill|
                 = render 'profiles/profile_skill_fields', f: skill
               .form-actions
-                = f.button :submit, "Update", class: "btn btn-itunes-inversed btn-lg btn-block"
+                = f.button :submit, "Next", class: "btn btn-itunes-inversed btn-lg btn-block"
 :scss
   main, body, html{
     margin: 0;
