--- a/app/views/after_signup/confirm_address.html.haml
+++ b/app/views/after_signup/confirm_address.html.haml
@@ -21,7 +21,7 @@
             = f.input :latitude, :disabled => true
             = f.input :longitude, :disabled => true
           .form-actions
-            = f.button :submit, "Update Address", class: "btn btn-itunes-inversed btn-lg btn-block"
+            = f.button :submit, "Next", class: "btn btn-itunes-inversed btn-lg btn-block"
 
 :scss
   #address-map{
