edit seo and edit search by skills

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,6 +1,6 @@
 - title @profile.name
 - description @profile.bio
-- keywords @profile.skills.map(&:name)
+- keywords @profile.skills.map(&:name) + %w[geek pair programming]
 = display_meta_tags :og => {title: @profile.name, type: 'profile', image: @profile.avatar.url, url: request.original_url}
 
 #profile-top
