--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,9 @@
 %html{"ng-app" => "app"}
   %head
     = display_meta_tags site: 'GEEKHUB', reverse: true,
-                        keywords: %w[geek pair programming map],
-                        description: "Find geeks around you"
+                        keywords: %w[geek pair programming pair-program code fix skills location],
+                        description: "Geekhub helps you find geeks by their skills, domain, location or university to pair program with them or work on side project, start up or fix your code bugs."
+
     = include_gon
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     %script{:src => "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"}
