--- a/app/views/layouts/_setting_nav.html.haml
+++ b/app/views/layouts/_setting_nav.html.haml
@@ -3,6 +3,7 @@
   .panel-body
     %ul.nav
       %li= link_to 'Profile', edit_profiles_path
+      %li= link_to 'Work and Education', work_and_education_profiles_path
       %li= link_to 'Account settings', edit_user_registration_path
       %li= link_to 'Edit skills', skills_profiles_path
       %li= link_to 'Edit address', address_profiles_path
