--- a/app/views/search/_profile_skills_search.html.haml
+++ b/app/views/search/_profile_skills_search.html.haml
@@ -1,1 +1,1 @@
-= link_to skill.name, search_path(qskills: skill.name), class: "skills button-xs btn-itunes-inversed"
+= link_to skill.skill.name, search_path(qskills: skill.skill.name), class: "skill btn-skills"
