--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,25 +25,22 @@
 @import 'bootstrap-datetimepicker';
 @import "intlTelInput";
 
-.footer {
-  height: 50px; /* .push must be the same height as .footer */
-}
-.push{
-  height: 98px;
-}
-
 body {
   background:#ECF0F1; // #EDF0F5; //rgb(235, 238, 243);
   width:100%;
   height:100%;
 }
 
-footer {
-  height: 60px;
+
+html {
+  position: relative;
+  min-height: 100%;
 }
-footer {
-  background-color: #eee;
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 100px;
 }
+
 
 ul.ui-autocomplete {
   position: absolute;
@@ -137,6 +134,13 @@ ul.ui-autocomplete {
     vertical-align:middle;
     font-size: 21px;
   }
+  .ion-log-in,
+  .ion-person-add{
+    margin:auto;
+    text-align:center;
+    vertical-align:middle;
+    font-size: 18px;
+  }
   .ion-code-working,
   .ion-android-notifications{
     color:$red;
@@ -217,4 +221,12 @@ ul.ui-autocomplete {
 
 #btn-search, #gps {
   cursor: pointer;
+}
+
+.help-block{
+  margin-top: 0;
+}
+
+.signup{
+  font-weight: bold;
 }
