--- a/app/views/after_signup/confirm_profile.html.haml
+++ b/app/views/after_signup/confirm_profile.html.haml
@@ -23,21 +23,28 @@
                   %span.fileinput-exists Change
                   = f.file_field :avatar
                 %a.btn.btn-default.fileinput-exists{"data-dismiss" => "fileinput", :href => "#"} Remove
-
+            %hr
+            %h3 Details About you
+            = f.input :username, required: true
             = f.input :first_name, required: true
             = f.input :last_name
-            = f.input :job_title
-            = f.input :phone, :input_html => { class:"form-control" }
             = f.input :age, required: true, class:"form-control", label: "Year of birth"
-
+            = f.input :phone, :input_html => { class:"form-control" }
             = f.input :domain_id, collection: @domains, class:"form-control", label: "Domain (Area of expertise)"
-
-            = f.input :university, input_html: { class: "form-control" }
             = f.input :bio
             = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons
 
+            -# %hr
+            -# %h3 Work and Education
+            -# = f.input :university, input_html: { class: "form-control" }
+            -# = f.input :job_title
+            -# = f.input :job_company
+            -# = f.input :job_details, as: :text, placeholder: "Please provide more details about your role."
+            %br
             .form-actions
               = f.button :submit, "Next", class: "btn btn-itunes-inversed btn-lg btn-block"
+            %br
+
 
 :scss
   main, body, html{
@@ -56,42 +63,3 @@
   });
 
   $('#profile_domain_id').selectize();
-
-  $('#profile_university').selectize({
-    maxItems: 1,
-    persist: false,
-    valueField: 'name',
-    labelField: 'name',
-    searchField: 'name',
-    options: [],
-    create: true,
-    render: {
-      option: function(item, escape) {
-        var actors = [];
-        for (var i = 0, n = item.length; i < n; i++) {
-          actors.push('<span>' + escape(item.autocompletes[i].name) + '</span>');
-        }
-
-        return '<div>' +
-                  '<span class="name">' + escape(item.name) + '</span>' +
-               '</div>';
-      }
-    },
-    load: function(query, callback) {
-      if (!query.length) return callback();
-      $.ajax({
-        url: '/autocompletes/university.json',
-        type: 'GET',
-        dataType: 'json',
-        data: {
-          q: query,
-        },
-        error: function() {
-          callback();
-        },
-        success: function(res) {
-          callback(res.autocompletes);
-        }
-      });
-    }
-  });
