--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     = display_meta_tags site: 'GEEKHUB', reverse: true,
                         keywords: %w[geek pair programming pair-program code fix skills location],
                         description: "Geekhub helps you find geeks by their skills, domain, location or university to pair program with them or work on side project, start up or fix your code bugs."
-
+    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}
     = include_gon
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     %script{:src => "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"}
@@ -15,3 +15,6 @@
     %main{:role => "main"}
       = render 'layouts/navigation' unless @hide_navbar
       = yield
+  - unless @hide_navbar || current_page?(root_path) || current_page?(search_path)
+    %footer.footer
+      = render 'layouts/footer'
