--- a/app/views/layouts/_setting_nav.html.haml
+++ b/app/views/layouts/_setting_nav.html.haml
@@ -8,3 +8,4 @@
       %li= link_to 'Edit skills', skills_profiles_path
       %li= link_to 'Edit address', address_profiles_path
       %li= link_to 'Edit linked accounts', linked_accounts_profiles_path
+      -# %li= link_to 'Edit privacy', privacy_profiles_path
