--- a/app/assets/stylesheets/search_box.scss
+++ b/app/assets/stylesheets/search_box.scss
@@ -48,7 +48,7 @@
       text-overflow: ellipsis;
     }
     .title{
-      height: 18px;
+      height: auto;
       font-size: 0.9em;
       padding: 0;
       margin: 0;
@@ -59,7 +59,7 @@
       text-overflow: ellipsis;
     }
     .domain{
-      height: 18px;
+      height: auto;
       font-size: 0.9em;
       padding: 0;
       margin: 0;
